--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id="app"></div>
+    <script src="cordova.js"></script>
     <script src="./dist/index.js"></script>
 </body>
 
